fix: tags width too big on horizontal layout

--- a/assets/js/components/Project.scss
+++ b/assets/js/components/Project.scss
@@ -22,6 +22,12 @@
     }
   }
 
+  &.horizontal {
+    .tag {
+      flex: initial;
+    }
+  }
+
   .project {
     //max-height: $size19;
     //display: flex;
